// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInput /> create SearchInput 1`] = `
<div
  className="blue"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group fd-input-group--after"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter a fruit"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              className="fd-button--light sap-icon--search fd-input-group__button"
              onClick={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchInput /> create SearchInput 2`] = `
<div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group fd-input-group--after"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter a fruit"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              className="fd-button--light sap-icon--search fd-input-group__button"
              onClick={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchInput /> create SearchInput 3`] = `
<div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group fd-input-group--after"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter a fruit"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              className="fd-button--light sap-icon--search fd-input-group__button"
              onClick={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchInput /> create SearchInput 4`] = `
<div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group fd-input-group--after"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter a fruit"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
